--- a/MessageLoggingService/MessageLoggingService/appsettings.json
+++ b/MessageLoggingService/MessageLoggingService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "AppParameters": {
+    "LogFileName": "Log.json"
+  },
   "AllowedHosts": "*"
 }
